# platform.core.api.url-download

./: .cproject  .gbs.conf  .project  CMakeLists.txt  build.sh  build_mobile.sh  capi-web-url-download.pc.in  project.config
TC/: _export_env.sh  _export_target_env.sh  _export_target_env.sh.in  config  config.in
TC/testcase/: Makefile  tslist  utc_download_add_http_header_field_negative.c  utc_download_add_http_header_field_positive.c  utc_download_create_negative.c  utc_download_create_positive.c  utc_download_destroy_negative.c  utc_download_destroy_positive.c  utc_download_get_auto_download_negative.c  utc_download_get_auto_download_positive.c  utc_download_get_content_name_negative.c  utc_download_get_content_name_positive.c  utc_download_get_content_size_negative.c  utc_download_get_content_size_positive.c  utc_download_get_destination_negative.c  utc_download_get_destination_positive.c  utc_download_get_downloaded_file_path_negative.c  utc_download_get_downloaded_file_path_positive.c  utc_download_get_error_negative.c  utc_download_get_error_positive.c  utc_download_get_etag_negative.c  utc_download_get_etag_positive.c  utc_download_get_file_name_negative.c  utc_download_get_file_name_positive.c  utc_download_get_http_header_field_list_negative.c  utc_download_get_http_header_field_list_positive.c  utc_download_get_http_header_field_negative.c  utc_download_get_http_header_field_positive.c  utc_download_get_http_status_negative.c  utc_download_get_http_status_positive.c  utc_download_get_mime_type_negative.c  utc_download_get_mime_type_positive.c  utc_download_get_network_bonding_negative.c  utc_download_get_network_bonding_positive.c  utc_download_get_network_type_negative.c  utc_download_get_network_type_positive.c  utc_download_get_notification_bundle_negative.c  utc_download_get_notification_bundle_positive.c  utc_download_get_notification_description_negative.c  utc_download_get_notification_description_positive.c  (+46 more)
debian/: changelog  control  rules
doc/: download_doc.h
doc_prod/: download_doc.h
include/: download.h  download_doc.h  download_product.h  url_download.h  url_download_private.h
packaging/: capi-web-url-download.changes  capi-web-url-download.spec
sample/: build.sh  ipc_test.c  test.c
script/: commit-template
src/: download-wrapping.c  download.c  url_download.c  url_download_provider.c
testcase/: CMakeLists.txt  url-download-tc.c
