CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

## PROJECT NAME
PROJECT(url-download-tc C)

## INCLUDES
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall")

ADD_EXECUTABLE(${PROJECT_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.c )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} capi-web-url-download)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

